fix search spacing

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -51,6 +51,7 @@ div#search-results p {
 .input-group.search {
   max-width: 200px;
   margin-right: 10px;
+  margin-top: 0px;
 }
 .sidebarSearchBar {
   margin-bottom: 30px;
